src/test/resources/miniJava/Test31.mjava
class Test31 {
	public static void main(String[] args){
		System.out.println(5);
	}
}

class AnotherClass {
	public static void main(String[] args){ // error
		System.out.println(7);
	}
}
